============ Version 0.3.1

2008-06-22  Philip Withnall  <philip@tecnocode.co.uk>

	* NEWS:
	* README:
	* configure.ac: Bump to version 0.3.1.
	* data/Makefile.am: Fix the desktop file.

2008-06-22  Philip Withnall  <philip@tecnocode.co.uk>

	* NEWS: Fix a typo.
	* data/diary.ui: Make the search dialogue non-modal.
	* configure.ac:
	* src/interface.c:
	* src/links/file.c:
	* src/main-window.c:
	* src/main.c: (diary_quit_real), (main):
	* src/main.h:
	* src/storage-manager.c: Fix the non-encryption build.

============ Version 0.3

2008-06-20  Philip Withnall  <philip@tecnocode.co.uk>

	* NEWS:
	* configure.ac:
	* data/Makefile.am: Bump to version 0.3.

2008-06-20  Philip Withnall  <philip@tecnocode.co.uk>

	* README:
	* configure.ac:
	* data/Makefile.am:
	* data/icons/16x16/Makefile.am:
	* data/icons/22x22/Makefile.am:
	* data/icons/32x32/Makefile.am:
	* data/icons/48x48/Makefile.am:
	* data/icons/Makefile.am: Added new icon by Jakub Szypulka.
	* src/storage-manager.c: (diary_storage_manager_connect): Clarified
	the error message given when both DB files exist.

2008-06-08  Philip Withnall  <philip@tecnocode.co.uk>

	* README: Updated the bug reporting instructions.

2008-06-08  Philip Withnall  <philip@tecnocode.co.uk>

	* data/diary.ui:
	* src/Makefile.am:
	* src/interface.c: (diary_create_interface):
	* src/main-window.c: (mw_select_date), (mw_search_activate_cb),
	(mw_jump_to_today_activate_cb), (mw_calendar_day_selected_cb):
	* src/main-window.h:
	* src/main.c: (diary_quit):
	* src/main.h:
	* src/search-dialog.c: (results_selection_changed_cb),
	(diary_search_dialog_setup), (sd_destroy_cb),
	(sd_search_button_clicked_cb), (select_date),
	(sd_results_tree_view_row_activated_cb),
	(sd_view_button_clicked_cb):
	* src/search-dialog.h:
	* src/storage-manager.c: (diary_storage_manager_entry_is_editable),
	(diary_storage_manager_set_entry),
	(diary_storage_manager_search_entries):
	* src/storage-manager.h: Added search functionality with a new search